--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-507.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇨🇳 中国-2.53MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-889.3KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.01MB/s(Youtube:不良林), server: cm01.db-link.in, port: 13302, type: vmess, uuid: c4fa06ca-c18f-37a4-ba0e-63537c0fb672, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /db, ws-headers: {Host: cm01.db-link.in}}
-  - {name: 🇯🇵 日本-600.9KB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-855.6KB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇫🇷 法国-411.8KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇯🇵 日本-1.22MB/s(Youtube:不良林), server: bgj.azzhuangaping.tw, port: 80, type: vmess, uuid: 992730fc-b237-43ed-a35a-1c5d3f4282b6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: bgj.azzhuangaping.tw}}
+  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
+  - {name: 🇮🇳 印度-2.55MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-507.3KB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-507.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-889.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
       - 🇫🇷 法国-411.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-507.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-507.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-889.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
       - 🇫🇷 法国-411.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-507.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-507.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-889.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
       - 🇫🇷 法国-411.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-507.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-507.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-889.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
       - 🇫🇷 法国-411.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-507.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-507.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-889.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
       - 🇫🇷 法国-411.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-507.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-507.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-889.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
       - 🇫🇷 法国-411.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-507.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-507.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1002.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-889.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇩🇪 德国-855.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
       - 🇫🇷 法国-411.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-507.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
