--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-507.3KB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-379.4KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-836.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
-  - {name: 🇺🇸 美国-952.5KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇺🇸 美国-7.01MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20719, type: trojan, password: 46ceba76-28b9-37df-8b08-b288e75aa646, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.55MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-897.1KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-379.4KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-645.3KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇯🇵 日本-4.68MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.13MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-507.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-836.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-952.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-7.01MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-897.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-645.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-507.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-836.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-952.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-7.01MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-897.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-645.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-507.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-836.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-952.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-7.01MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-897.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-645.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-507.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-836.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-952.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-7.01MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-897.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-645.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-507.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-836.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-952.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-7.01MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-897.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-645.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-507.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-836.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-952.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-7.01MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-897.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-645.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-507.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-836.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-952.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-7.01MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-897.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-645.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
